dao owner & admin

--- a/Move.toml
+++ b/Move.toml
@@ -25,6 +25,7 @@ generis_dao = "0x0"
 std = "0x1"
 sui = "0x2"
 dao = "0x666"
+dao_treasury = "0x222"
 
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
